@@ -1,4 +1,7 @@
-﻿[B]Version 2.1.9[/B]
+﻿[B]Version 2.2.0[/B]
+[+] Поиск: Добавлен BTDigg (magnet)
+
+[B]Version 2.1.9[/B]
 [+] Списки Медиа: Баг-фикс TMDB SSL, нижний переход на следующую страницу
 [+] Списки Медиа: Расширенная информация KickAssSo, EZTV
 [+] Списки Медиа: Добавлен ThePirateBay
